# ansible-playbook-grapher

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  Readme.md  build.sh  exclude_roles.ln  exclude_roles.txt  pyproject.toml  pytest.ini  requirements.txt  requirements_tests.txt  ruff.toml  setup.cfg  setup.py  site.mmd  site_wout_loadbalancer_role.md  site_wout_loadbalancer_role.mmd  test_install.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  lint.yml  testing.yaml
ansibleplaybookgrapher/: __init__.py  cli.py  graph.py  graph_model.py  graphbuilder.py  grapher.py  highlight-hover.js  parser.py  postprocessor.py  renderer.py  utils.py  version.py
ansibleplaybookgrapher/data/: graph.css  highlight-hover.js
ansibleplaybookgrapher/renderer/: __init__.py  graphviz.py  json.py  mermaid.py  postprocessor.py
ansibleplaybookgrapher/renderer/graphviz/: __init__.py  (+1 more)
examples/: example.yml
mermaid/: site.md  site.mmd  site_wout_database_and_webserver.mmd  site_wout_loadbalancer.mmd  site_wout_tasks.mmd
tests/: __init__.py  conftest.py  generate-job-summary.py  job-summary.md.j2  pytest.ini  requirements_tests.txt  test_cli.py  test_graph.py  test_graph_model.py  test_grapher.py  test_graphviz_postprocessor.py  test_graphviz_renderer.py  test_install.sh  test_json_renderer.py  test_mermaid_renderer.py  test_parser.py  test_playbook_grapher.py  test_postprocessor.py  test_utils.py
tests/fixtures/: blocks_with_role.yml  docker-mysql-galaxy.yml  example.yml  example_import_role.yml  example_include_role.yml  example_with_roles.yml  group-roles-by-name.yml  handlers-in-role.yml  handlers.yml  import_playbook.yml  import_role.yml  import_tasks.yml  include_role.yml  include_role_complex_loop.yml  include_role_with_loop.yml  include_tasks.yml  include_with_blocks.yml  inventory  multi-plays.yml  nested-include-role.yml  nested_import_playbook.yml  nested_include_tasks.yml  play-hiding.yml  relative_var_files.yml  requirements.yml  roles_argument_validation.yml  roles_dependencies.yml  simple_playbook.yml  simple_task.yml  tags-and-roles.yml  tags.yml  tasks.yml  with_block.yml  with_roles.yml
(+40 files in other folders)
